Worked on finessing home, about, and shop pages, and added icons to rest of footers

--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/fonts.css">
 		<link rel="stylesheet" href="css/grids.css">
+		<!-- Script for fontawesome -->
+		<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
 	</head>
 
 	<body>
@@ -50,68 +52,61 @@
 	      </nav>
 		</header>
 
-		<!----- Hero Banner----->
-		<!-- <div class="hero-about">
-			<div class="text">
-				<h1>Meet your friendly neighbourhood garden.</h1>
-				<p>
-					We are a family owned and operated full-service floral shop based in Vancouver, BC. creating bespoke floral arrangements for any type of occasions. We have been committed to offering only the freshest and finest floral arrangements and gifts with friendly and timely customer service support. Your support has continued to...
-				</p> 
-			</div>
-			<div class="img">
-				<img src="img/product-mod-image.png">
-			</div>
-		</div>
- -->
 		<section class ="about">
-			<div class ="hero-about col-2of2-reverse">
+			<div class ="hero">
 				<div class="text">
 					<h1>Meet your friendly neighbourhood garden.</h1>
-					<p>
-						We are a family owned and operated full-service floral shop based in Vancouver, BC. creating bespoke floral arrangements for any type of occasions. We have been committed to offering only the freshest and finest floral arrangements and gifts with friendly and timely customer service support. Your support has continued to...
-					</p> 
 				</div>
 			</div>
-			<div class = "hero-about col-1of2-reverse">
+			<!-- <div class = "hero-about col-1of2-reverse">
 				<img src="img/product-mod-image.png " alt="Photo of bouquet of flowers being held by a woman">
-			</div>
+			</div> -->
+		<p class="about-desc">
+			We are a family owned and operated full-service floral shop based in Vancouver, BC. creating bespoke floral arrangements for any type of occasions. We have been committed to offering only the freshest and finest floral arrangements and gifts with friendly and timely customer service support. Your support has continued to...
+		</p> 
 		</section>
 
 		<!----- Values---->
-		<section class ="about">
-		<div class ="grid ">
-			<div class ="values col-1of3">
-				<img src="img/flower-tile.png" alt="Photo of peonies">
-				<p>Family owned & operated</p>
-			</div>
+		<section class ="values">
+			<div class ="grid ">
+				<div class ="values col-1of3">
+					<img src="img/flower-tile.png" alt="Photo of peonies">
+					<h3 class="web">Family owned & operated</h3>
+					<p> We are a multigenerational business that has served Vancouver for over 25 years. </p>
+				</div>
 
-			<div class ="values col-2of3">
-				<img src="img/plants-tile.jpg" alt="Photo of a green plant">
-				<p>Local</p>
-			</div>
+				<div class ="values col-2of3">
+					<img src="img/plants-tile.jpg" alt="Photo of a green plant">
+					<h3 class="web">Local</h3>
+					<p>We work with a network of local growers to support low-carbon arigiculture. </p>
+				</div>
 
-			<div class ="values col-3of3">
-				<img src="img/services-tile.jpg" alt="Photo of flowers in a tin barrel">
-				<p>Bespoke</p>
-			</div>
+				<div class ="values col-3of3">
+					<img src="img/services-tile.jpg" alt="Photo of flowers in a tin barrel">
+					<h3 class="web">Bespoke</h3>
+					<p>We consider the details and idiosyncrasies that make each bouquet different and unique.</p>
+				</div>
 
-		</div>  <!--.grid ends -->
+			</div>  <!--.grid ends -->
 		</section>
 
 		<!----- Location ---->
-		<div class ="alternating-content col-1of2">
-			<img src="img/home-grown.jpg" alt="Photo of purple flowers in a garden">
-		</div>
-		<div class ="alternating-content col-2of2">
-			<h2>Our location</h2>
-			<p>#102-3375 Kingsway</p>
-			<p>Vancouver, B.C.</p>
-			<p>V5R 5K6</p>
-			<p>(604) 738-0678 </p>
-			<p>We’re open Monday to Fridays from 10am to 5pm.</p>
-			<p>Instagram</p>
-			<p>Facebook</p>
-		</div>
+	<!-- 	<section class = "location">	
+			<div class ="alternating-content col-1of2">
+				<img src="img/home-grown.jpg" alt="Photo of purple flowers in a garden">
+			</div>
+			<div class ="alternating-content col-2of2">
+				<h2>Our location</h2>
+				<p>#102-3375 Kingsway</p>
+				<p>Vancouver, B.C.</p>
+				<p>V5R 5K6</p>
+				<p>(604) 738-0678 </p>
+				<p>We’re open Monday to Fridays from 10am to 5pm.</p>
+				<p>Instagram</p>
+				<p>Facebook</p>
+			</div>
+		</section>
+ -->
 
 		<!----- Footer----->
 		 <div class="container-footer">
@@ -126,18 +121,17 @@
 			</div>
 
 			 <div class="child-footer location">
-				 <h3 class="web">OUR LOCATION</h3>
+				 <h3 class="web">VISIT US</h3>
 				 <p>3375 Kingsway #102, 
 					Vancouver, B.C. 
 					 V5R 5K6  </p>
 			</div>
 
-			 <div class="child-footer contact">
+			<div class="child-footer contact">
 				 <h3 class="web">CONTACT US</h3>
-				 <p>(604) 738-0678
-					 <img src="img/icons/ig-icon.png" alt="Instagram logo" width="15" height="15"> Instagram
-					 <img src="img/icons/fb-logo.png" alt="Facebook logo" width="15" height="15">   Facebook
-				 </p>
+				 <p>(604) 738-0678</p>
+				 <p><i class="fab fa-instagram"></i> Instagram</p>
+				 <p><i class="fab fa-facebook-f"></i> Facebook</p>
 			 </div>
 	 	</div>
 
