--- a/shop.html
+++ b/shop.html
@@ -17,6 +17,8 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/fonts.css">
 		<link rel="stylesheet" href="css/grids.css">
+		<!-- Script for fontawesome -->
+		<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
 	</head>
 
 	<body>
@@ -52,16 +54,17 @@
 		</header>
 
 		<!----- Introduction----->
-		<div class="hero shop">
-			<div class="text">
-				<h1>Celebrate with nature.</h1>
-				<p>The simple pleasures in life are timeless, no matter how you celebrate them. </p>
+		<section class="shop">
+			<div class="hero">
+				<div class="text">
+					<h1>Celebrate with nature.</h1>
+					<p>The simple pleasures in life are timeless, no matter how you celebrate them. </p>
+				</div>
 			</div>
-		</div>
+		</section>
 
-		<!----- Values ---->
-		<div class ="grid">	
-			<div class="container-product-listing">
+		<!----- Products ---->
+		<div class ="grid products">
 				<div class ="product-item col-1of3">
 				  	 <img src="img/product-lovers-sunrise.jpg" alt="Photo of Lover's Sunrise bouquet">
 				  	  <p class="product-name">Lover's Sunrise</p>
@@ -70,7 +73,7 @@
 							<a class ="btn-quick-add" href="#"> + Quick Add </a>
 				 	  </div>
 				</div>
-
+				
 				<div class ="product-item col-2of3">
 				  	 <img src="img/red-bouquet.jpg" alt="Photo of red bouquet">
 				  	  <p class="product-name">Radiantly Rouge</p>
@@ -88,26 +91,36 @@
 							<a class ="btn-quick-add" href="#"> + Quick Add </a>
 				 	  </div>
 				</div>
+		</div>
 
-				<div class ="product-item col-1of3">
-				  	 <img src="img/nemo-bouquet.jpg" alt="Photo of orange and blue bouquet">
-				  	  <p class="product-name">Just Keep Swimming</p>
-					  <p class ="price">$45.99</p>
-					  <div class="btn-position">
-							<a class ="btn-quick-add" href="#"> + Quick Add </a>
-				 	  </div>
-				</div>
+		<div class ="grid products">
+			<div class ="product-item col-1of3">
+			  	 <img src="img/nemo-bouquet.jpg" alt="Photo of orange and blue bouquet">
+			  	  <p class="product-name">Just Keep Swimming</p>
+				  <p class ="price">$45.99</p>
+				  <div class="btn-position">
+						<a class ="btn-quick-add" href="#"> + Quick Add </a>
+			 	  </div>
+			</div>
 
-				<div class ="product-item col-2of3">
-				  	 <img src="img/lavender-bouquet.jpg" alt="Photo of purple bouquet">
-				  	  <p class="product-name">Lavender Dreams</p>
-					  <p class ="price">$40.99</p>
-					  <div class="btn-position">
-							<a class ="btn-quick-add" href="#"> + Quick Add </a>
-				 	  </div>
-				</div>
-			</div> <!--.container-product-listing ends -->
-		</div>  <!--.grid ends -->
+			<div class ="product-item col-2of3">
+			  	 <img src="img/lavender-bouquet.jpg" alt="Photo of purple bouquet">
+			  	  <p class="product-name">Lavender Dreams</p>
+				  <p class ="price">$40.99</p>
+				  <div class="btn-position">
+						<a class ="btn-quick-add" href="#"> + Quick Add </a>
+			 	  </div>
+			</div>
+
+			<div class ="product-item col-2of3">
+			  	 <img src="img/lavender-bouquet.jpg" alt="Photo of purple bouquet">
+			  	  <p class="product-name">Lavender Dreams</p>
+				  <p class ="price">$40.99</p>
+				  <div class="btn-position">
+						<a class ="btn-quick-add" href="#"> + Quick Add </a>
+			 	  </div>
+			</div>
+		</div> 
 
 		<!----- Footer----->
 		 <div class="container-footer">
@@ -122,7 +135,7 @@
 			</div>
 
 			 <div class="child-footer location">
-				 <h3 class="web">OUR LOCATION</h3>
+				 <h3 class="web">VISIT US</h3>
 				 <p>3375 Kingsway #102, 
 					Vancouver, B.C. 
 					 V5R 5K6  </p>
@@ -130,10 +143,9 @@
 
 			 <div class="child-footer contact">
 				 <h3 class="web">CONTACT US</h3>
-				 <p>(604) 738-0678
-					 <img src="img/icons/ig-icon.png" alt="Instagram logo" width="15" height="15"> Instagram
-					 <img src="img/icons/fb-logo.png" alt="Facebook logo" width="15" height="15">   Facebook
-				 </p>
+				 <p>(604) 738-0678</p>
+				 <p><i class="fab fa-instagram"></i> Instagram</p>
+				 <p><i class="fab fa-facebook-f"></i> Facebook</p>
 			 </div>
 	 	</div>
 
