--- a/home.html
+++ b/home.html
@@ -17,11 +17,8 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/fonts.css">
 		<link rel="stylesheet" href="css/grids.css">
-
-		<!-- Place your kit's code here -->
+		<!-- Script for fontawesome -->
 		<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
-
-
 	</head>
 
 	<body>
@@ -57,7 +54,7 @@
 		</header>
 
 		<!----- Hero Banner----->
-		<section class ="about">
+		<section class ="home">
 		<div class="hero">
 			<div class="text">
 				<h1>Spread happiness with summer's blooms.</h1>
@@ -80,43 +77,59 @@
 
 
 			<div class ="menu col-2of3">
-				<img src="img/plants-tile.jpg" alt="Photo of a green plant">
-				<p>Plants</p>
+				<a href="shop.html">
+					<img src="img/plants-tile.jpg" alt="Photo of a green plant">
+					<p>Plants</p>
+				</a>
 			</div>
 
 			<div class ="menu col-3of3">
-				<img src="img/services-tile.jpg" alt="Photo of flowers in a tin barrel">
-				<p>Services</p>
+				<a href="shop.html">
+					<img src="img/services-tile.jpg" alt="Photo of flowers in a tin barrel">
+					<p>Services</p>
+				</a>
 			</div>
 		</div>
 		</section>
 
 		<!----- Alternating Content ----->
-		<div class ="alternating-content col-1of2">
+		<div class ="alternating-content-img col-1of2">
 			<img src="img/home-grown.jpg" alt="Photo of purple flowers in a garden">
 		</div>
-		<div class ="alternating-content col-2of2">
+		<div class ="alternating-content-text col-2of2">
 			<h2>Home grown.</h2>
-			<p>We source our flowers from local suppliers, lowering our carbon footprint and providing the freshest blooms to our customers.<p>
+			<p>We source our flowers from local suppliers, lowering our carbon footprint and providing the freshest blooms to our customers.</p>
 			<a href="shop.html">
-					<button type="button" class="btn-main">learn more</button>
+				<button type="button" class="btn-main">learn more</button>
 			</a>
 		</div>
 
-		<div class="grid">
+		<div class ="alternating-content-text col-1of2">
+			<h2>The gift of giving.</h2>
+			<p>ive one of nature’s most beautiful gifts to the people who mean the most to you.</p>
+			<a href="shop.html">
+					<button type="button" class="btn-main">shop flowers</button>
+			</a>
+		</div>
+		<div class ="alternating-content-img col-2of2">
+			<img src="img/gift-of-giving.jpg" alt="Photo of bouquet of flowers being held by a woman">
+		</div>
+
+
+	<!-- 	<div class="grid">
 		<div class ="alternating-content col-2of2-reverse">
 			<h2>The gift of giving.</h2>
 			<p>Give one of nature’s most beautiful gifts to the people who mean the most to you.</p>
 			<a href="shop.html">
 				<button type="button" class="btn-main">shop flowers</button>
 			</a>
-		</div>
+		</div> -->
 
 		<!-- <div class="alternating-content-two"> -->
-		<div class ="alternating-content col-1of2-reverse">
+		<!-- <div class ="alternating-content col-1of2-reverse">
 			<img src="img/gift-of-giving.jpg" alt="Photo of bouquet of flowers being held by a woman">
 		</div>
-		</div>
+		</div> -->
 		<!-- </div> -->
 
 		<!----- Footer----->
@@ -132,7 +145,7 @@
 			</div>
 
 			 <div class="child-footer location">
-				 <h3 class="web">OUR LOCATION</h3>
+				 <h3 class="web">VISIT US</h3>
 				 <p>102 3375 Kingsway
 					Vancouver, B.C. 
 					 V5R 5K6  </p>
@@ -142,12 +155,10 @@
 				 <h3 class="web">CONTACT US</h3>
 				 <p>(604) 738-0678</p>
 				 <p><i class="fab fa-instagram"></i> Instagram</p>
-
 				 <p><i class="fab fa-facebook-f"></i> Facebook</p>
-
-
 			 </div>
 	 	</div>
+
 	 	<div class="sub-footer">
 	 		<p>Made with love in Vancouver, B.C.</p>
 	 		<a href="styleguide.html" target="_blank"> Styleguide</a>
