--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 		<header>
 			 <nav class="grid topnav">
 		          <div class="grid-col-1of2 logo">
-		                 <a href="home.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
+		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 		          </div>
 
             	  <div class="grid-col-1of6 search-bar">
