--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 
 <!doctype html>
-		
+
 	<head>
 		<meta charset="utf-8">
-		<title>Four Seasons Floral: Branding </title>
+		<title>Four Seasons Floral Homepage</title>
 
 		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
     	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,45 +17,154 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/fonts.css">
 		<link rel="stylesheet" href="css/grids.css">
+		<!-- Script for fontawesome -->
+		<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
 	</head>
 
 	<body>
+		<!----- Top Nav ----->
 		<header>
-			 <nav class="grid styleguide">
-				<a href="index.html">Home</a>
-				<a href="sitemap.html">Site Map</a>
-				<a href="wireframes.html">Wireframes</a>
-				<a href="styleguide.html">Styleguide</a>
-				<a href="citations.html">Citations</a>
-			</nav> 
+			<div class ="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
+			 <nav class="grid topnav">
+		          <div class="grid-col-1of2 logo">
+		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
+		          </div>
+
+            	  <div class="grid-col-1of6 search-bar">
+						<input type="text" id="search" name="search" placeholder="Search...">
+            	  </div>
+
+                  <div class="grid-col-1of6">
+                    	<a href="shop.html">Shop</a>
+                  </div>
+                  <div class="grid-col-1of6">
+                      	<a href="about.html">About</a>
+                  </div>
+                  <div class="grid-col-1of6">
+                     	 <a href="#">Support</a>
+                  </div>
+                  <div class="grid-col-1of6">
+                     	 <a href="#">Contact</a>
+                  </div>
+
+                   <div class="grid-col-1of6">
+                 		 <a href="#"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
+            	  </div>
+	      </nav>
 		</header>
 
-		<section class="branding">
-			<section class="definition">
-			<h1 class="styleguide">Brand Definition</h1>		
-				<h2>About Four Seasons Floral</h2>
-					<p> 
-						Four Seasons Floral is a family-owned and full-service floral shop based in Vancouver, BC. They create bespoke floral arrangements for any types of occasions.
-					</p>
+		<!----- Hero Banner----->
+		<section class ="home">
+		<div class="hero">
+			<div class="text">
+				<h1>Spread happiness with summer's blooms.</h1>
+				<a href="shop.html">
+					<button type="button" class="btn-main"> Shop Bouquets</button>
+				</a>
+			</div>
+		</div>
+		</section>
 
-				<h2>Audience</h2>
-					<p>
-						Four Seasons Floral generally has a wide target audience considering people typically have different reasons to purchase flowers. However, the company best appeals to individuals and groups that value meticulous care throughout the entire process of flower arranging, bespoke floral arrangements, and accomodating customer service.
-					</p>
+		<!----- Product/Service Offerings---->
+		<section class ="home">
+		<div class ="grid">
+			<div class ="menu col-1of3">
+				<a href="shop.html">
+					<img src="img/flower-tile.png" alt="Photo of peonies">
+					<p>Flowers</p>
+				</a>
+			</div>
 
-				<h2>Unique Selling Proposition</h2>
-					<p> 
-						Four Seasons Floral strives to create thoughtful and memorable experiences through the language of flowers. They source locally from flower auctions and through foraging from their own backyards. Four Season Florals carefully inspects each stem, cleans and cares for flowers in a way that meets their high standards.
-					</p>
-			</section> 
 
-			<section class="art-direction">
-				<h1 class="styleguide">SAMPLE ART DIRECTION</h1>	
-					<img src="img/art-direction-sample.png" alt="A moodboard for a potential art direction.">
-			</section>
+			<div class ="menu col-2of3">
+				<a href="shop.html">
+					<img src="img/plants-tile.jpg" alt="Photo of a green plant">
+					<p>Plants</p>
+				</a>
+			</div>
 
-		</section> <!--.branding ends -->
-		
+			<div class ="menu col-3of3">
+				<a href="shop.html">
+					<img src="img/services-tile.jpg" alt="Photo of flowers in a tin barrel">
+					<p>Services</p>
+				</a>
+			</div>
+		</div>
+		</section>
+
+		<!----- Alternating Content ----->
+		<div class ="alternating-content-img col-1of2">
+			<img src="img/home-grown.jpg" alt="Photo of purple flowers in a garden">
+		</div>
+		<div class ="alternating-content-text col-2of2">
+			<h2>Home grown.</h2>
+			<p>We source our flowers from local suppliers, lowering our carbon footprint and providing the freshest blooms to our customers.</p>
+			<a href="shop.html">
+				<button type="button" class="btn-main">learn more</button>
+			</a>
+		</div>
+
+		<div class ="alternating-content-text col-1of2">
+			<h2>The gift of giving.</h2>
+			<p>ive one of nature’s most beautiful gifts to the people who mean the most to you.</p>
+			<a href="shop.html">
+					<button type="button" class="btn-main">shop flowers</button>
+			</a>
+		</div>
+		<div class ="alternating-content-img col-2of2">
+			<img src="img/gift-of-giving.jpg" alt="Photo of bouquet of flowers being held by a woman">
+		</div>
+
+
+	<!-- 	<div class="grid">
+		<div class ="alternating-content col-2of2-reverse">
+			<h2>The gift of giving.</h2>
+			<p>Give one of nature’s most beautiful gifts to the people who mean the most to you.</p>
+			<a href="shop.html">
+				<button type="button" class="btn-main">shop flowers</button>
+			</a>
+		</div> -->
+
+		<!-- <div class="alternating-content-two"> -->
+		<!-- <div class ="alternating-content col-1of2-reverse">
+			<img src="img/gift-of-giving.jpg" alt="Photo of bouquet of flowers being held by a woman">
+		</div>
+		</div> -->
+		<!-- </div> -->
+
+		<!----- Footer----->
+		 <div class="container-footer">
+
+			 <div class="child-footer about">
+				 <h3 class="web">ABOUT FOUR SEASONS FLORAL</h3>
+				 <p>We are a family-owned and full-service floral shop
+					 based in Vancouver, BC.  creating bespoke floral
+					 arrangements for any types of occasions. 
+					 We’re open Monday - Fridays from
+					 10am - 5pm PST</p>
+			</div>
+
+			 <div class="child-footer location">
+				 <h3 class="web">VISIT US</h3>
+				 <p>102 3375 Kingsway
+					Vancouver, B.C. 
+					 V5R 5K6  </p>
+			</div>
+
+			 <div class="child-footer contact">
+				 <h3 class="web">CONTACT US</h3>
+				 <p>(604) 738-0678</p>
+				 <p><i class="fab fa-instagram"></i> Instagram</p>
+				 <p><i class="fab fa-facebook-f"></i> Facebook</p>
+			 </div>
+	 	</div>
+
+	 	<div class="sub-footer">
+	 		<p>Made with love in Vancouver, B.C.</p>
+	 		<a href="styleguide.html" target="_blank"> Styleguide</a>
+	 		<a href="citations.html" target="_blank"> Citations</a>
+	 	</div>
+
 	</body>
 
 </html>
