--- a/shop.html
+++ b/shop.html
@@ -27,7 +27,7 @@
 			<div class ="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
 			 <nav class="grid topnav">
 		          <div class="grid-col-1of2 logo">
-		                 <a href="home.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
+		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
 		          </div>
 
             	  <div class="grid-col-1of6 search-bar">
@@ -66,7 +66,7 @@
 		<!----- Products ---->
 		<div class ="grid products">
 				<div class ="product-item col-1of3">
-				  	 <img src="img/product-lovers-sunrise.jpg" alt="Photo of Lover's Sunrise bouquet">
+				  	 <img src="img/product-lovers-sunrise.png" alt="Photo of Lover's Sunrise bouquet">
 				  	  <p class="product-name">Lover's Sunrise</p>
 					  <p class ="price">$45.99</p>
 					  <div class="btn-position">
@@ -95,7 +95,7 @@
 
 		<div class ="grid products">
 			<div class ="product-item col-1of3">
-			  	 <img src="img/nemo-bouquet.jpg" alt="Photo of orange and blue bouquet">
+			  	 <img src="img/nemo-bouquet.png" alt="Photo of orange and blue bouquet">
 			  	  <p class="product-name">Just Keep Swimming</p>
 				  <p class ="price">$45.99</p>
 				  <div class="btn-position">
