--- a/styleguide.html
+++ b/styleguide.html
@@ -16,19 +16,12 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/fonts.css">
 		<link rel="stylesheet" href="css/grids.css">
+		<!-- Script for fontawesome -->
+		<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
 	</head>
 
 	<body>
 		<header>
-		<!-- 	 <nav class="grid styleguide">
-				<a href="index.html">Home</a>
-				<a href="sitemap.html">Site Map</a>
-				<a href="wireframes.html">Wireframes</a>
-				<a href="styleguide.html">Styleguide</a>
-				<a href="citations.html">Citations</a>
-			</nav> -->
-
-
 			<!--Secondary Nav Bar -->
 			<nav class= "grid sub-nav">
 				<a href="#interactive-elements">Interactive Elements</a>
@@ -226,7 +219,7 @@
 					<h1>Headings</h1>
 						<h2>CSS Code:</h2>
 		       			 <code>
-		       			 	h1.web { <br>
+		       			 	h1 { <br>
 								font-family: "FreightBigPro-Book", Verdana, sans-serif; <br>
 								font-size: 3rem; <br>
 								margin-bottom: 0; <br>
@@ -234,11 +227,11 @@
 								text-transform: none; <br>
 							} <br>
 
-							h2.web { <br>
+							h2 { <br>
 								font-size: 2rem; <br>
 							} <br>
 
-							h3.web { <br>
+							h3{ <br>
 								font-family: "SuisseIntl-Normal", Verdana, sans-serif;  <br>
 								font-weight: 600; <br>
 								font-size: .9rem; <br>
@@ -256,9 +249,9 @@
 		       			 </code>
 
 		       			 <h2> Sample: </h2>
-							<h1 class="web"> Heading 1</h1>
+							<h1 class="styleguide"> Heading 1</h1>
 								<p>Freight Big Pro Semibold - 3rem, 0.04rem letter spacing</p>
-							<h2 class="web"> Heading 2</h2>
+							<h2 class="styleguide"> Heading 2</h2>
 								<p>Freight Big Pro Semibold - 2rem, 0.04rem letter spacing</p>
 							<h3 class="web"> Heading 3</h3>
 								<p>Suisse Int'l Regular - 0.9rem, 0.1 letter spacing</p>
@@ -511,7 +504,7 @@
 										<img src="img/product-lovers-sunrise.jpg" alt="Photo of Lover's Sunrise bouquet">
 									</div>
 									<div class="product-desc">
-										<h1 class="web">Lover's Sunrise</h1>
+										<h1 class="styleguide">Lover's Sunrise</h1>
 										  	<div class="review-star-rating">
 									              <p>&#9733;</p>
 									              <p>&#9733;</p>
@@ -553,7 +546,7 @@
 			       			 &lt;div class="review"&gt;<br>
 						      	   &lt;h2&gt; Reviews  &lt;a href="#"&gt;(15) &lt;/a>&gt;&lt;/h2&gt;<br>
 						      	   &lt;div&gt;<br>
-						               &lt;p class="author">Taylor H. |  Nov 24, 2018 &lt;/p&gt;<br>
+						               &lt;p class="author">Taylor H. on June 11, 2020 &lt;/p&gt;<br>
 						            &lt;/div&gt;<br>
 
 						            &lt;div class="review-content"&gt;<br>
@@ -601,19 +594,19 @@
 					  <h2> Sample: </h2>
 				      <div class="review">
 				      	  <h2> Reviews <a href="#">(15)</a></h2>
-				      	  <div>
-				              <p class="author">Taylor H. from Vancouver, B.C.</p>
-				           </div>
-
+				      	    <div class="review-star-rating">
+						              <p>&#9733;</p>
+						              <p>&#9733;</p>
+						              <p>&#9733;</p>
+						              <p>&#9733;</p>
+						              <p>&#9733;</p>
+					         </div>
+				      	  
 				           <div class="review-content">
-				           	      <div class="review-star-rating">
-						              <p>&#9733;</p>
-						              <p>&#9733;</p>
-						              <p>&#9733;</p>
-						              <p>&#9733;</p>
-						              <p>&#9733;</p>
-					           	</div>
-
+					           	<div>
+					              <p class="author">Taylor H. on June 11, 2020</p>
+					           </div>
+				           	  
 					            <div>
 					            	 <h2>Made from the heart</h2>
 					          	</div>
@@ -862,8 +855,8 @@
 				 &lt;div class="child-footer"&gt; <br>
 				 &lt;h2&gt;CONTACT US&lt;/h2&gt; <br>
 				 &lt;p&gt;(604) 738-0678&lt;/p&gt <br>
-				 &lt;br&gt;&lt;img src="img/icons/ig-icon.png" alt="Instagram logo" width="15" height="15"&gt; Instagram;<br>
-				 &lt;br&gt;&lt;img src="img/icons/fb-icon.png" alt="Facebook logo" width="15" height="15"&gt; Facebook;<br>
+				 &lt;p>&lt;i class="fab fa-instagram"&gt;&lt;/i&gt; Instagram&lt;/p&gt;
+				 &lt;p>&lt;i class="fab fa-facebook-f"&gt;&lt;/i&gt; Facebook&lt;/p&gt;
 				 &lt;br&gt;V5R 5K6  ;/p&gt;<br>
 				 &lt;/p&gt;<br>
 				 &lt;/div&gt;<br>
@@ -897,8 +890,8 @@
 				 <div class="child-footer contact">
 					 <h3 class="web">CONTACT US</h3>
 					 <p>(604) 738-0678
-						 <img src="img/icons/ig-icon.png" alt="Instagram logo" width="15" height="15"> Instagram
-						 <img src="img/icons/fb-logo.png" alt="Facebook logo" width="15" height="15">   Facebook
+					 <p><i class="fab fa-instagram"></i> Instagram</p>
+				 	 <p><i class="fab fa-facebook-f"></i> Facebook</p>
 					 </p>
 				 </div>
 
