--- a/citations.html
+++ b/citations.html
@@ -86,6 +86,10 @@
 					<li> User [Icon]. Retrieved from <a href="https://material.io/resources/icons/">https://material.io/resources/icons/</a></li>
 
 					<li> Shopping Cart [Icon]. Retrieved from <a href="https://material.io/resources/icons/">https://material.io/resources/icons/</a></li>
+
+					<li>Ottink, Dennis. Woman in wedding dress holding bouquet [Photo]. Retrieved from <a href="https://unsplash.com/photos/4hYZpT4dP9w">https://unsplash.com/photos/4hYZpT4dP9w</a></li>
+
+					<li>Spratt, Annie. Top half of bouquet in a brown background [Photo]. Retrieved from <a href="https://unsplash.com/photos/TIAsSpkuxws">https://unsplash.com/photos/TIAsSpkuxws</a></li>
 				</ul>
 
 		</section> 
