--- a/styleguide.html
+++ b/styleguide.html
@@ -35,7 +35,7 @@
 		<section>
 			<h1>
 				<!-- Open link in new tab from https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_target -->
-				Find our github repository <a href ="https://github.com/jaxofone/iat339-p02" target="_blank">here</a>.
+				Find our github repository <a  class="styleguide" href ="https://github.com/jaxofone/iat339-p02" target="_blank">here</a>.
 			</h1>
 		</section>
 
