--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
 
 
 <!doctype html>
-		
+
 	<head>
 		<meta charset="utf-8">
 		<title>Shop</title>
@@ -41,7 +41,7 @@
                       	<a href="about.html">About</a>
                   </div>
                   <div class="grid-col-1of6">
-                     	 <a href="#">Support</a>
+                     	 <a href="support.html">Support</a>
                   </div>
                   <div class="grid-col-1of6">
                      	 <a href="#">Contact</a>
@@ -73,7 +73,7 @@
 							<a class ="btn-quick-add" href="#"> + Quick Add </a>
 				 	  </div>
 				</div>
-				
+
 				<div class ="product-item col-2of3">
 				  	 <img src="img/red-bouquet.jpg" alt="Photo of red bouquet">
 				  	  <p class="product-name">Radiantly Rouge</p>
@@ -120,7 +120,7 @@
 						<a class ="btn-quick-add" href="#"> + Quick Add </a>
 			 	  </div>
 			</div>
-		</div> 
+		</div>
 
 		<!----- Footer----->
 		 <div class="container-footer">
