--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                       	<a href="about.html">About</a>
                   </div>
                   <div class="grid-col-1of6">
-                     	 <a href="#">Support</a>
+                     	 <a href="support.html">Support</a>
                   </div>
                   <div class="grid-col-1of6">
                      	 <a href="#">Contact</a>
