--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                   </div>
 
                    <div class="grid-col-1of6">
-                 		 <a href="#"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
+                 		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
             	  </div>
 	      </nav>
 		</header>
