--- a/cart.html
+++ b/cart.html
@@ -7,7 +7,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Four Seasons Floral Homepage</title>
+		<title>Cart</title>
 
 		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
     	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,84 +53,17 @@
 	      </nav>
 		</header>
 
-		<!----- Hero Banner----->
-		<section class ="home">
-		<div class="hero">
-			<div class="text">
-				<h1>Spread happiness with summer's blooms.</h1>
-				<a href="shop.html">
-					<button type="button" class="btn-main"> Shop Bouquets</button>
-				</a>
-			</div>
-		</div>
-		</section>
-
-		<!----- Product/Service Offerings---->
-		<section class ="home">
-		<div class ="grid">
-			<div class ="menu col-1of3">
-				<a href="shop.html">
-					<img src="img/flower-tile.png" alt="Photo of peonies">
-					<p>Flowers</p>
-				</a>
-			</div>
-
-
-			<div class ="menu col-2of3">
-				<a href="shop.html">
-					<img src="img/plants-tile.jpg" alt="Photo of a green plant">
-					<p>Plants</p>
-				</a>
-			</div>
-
-			<div class ="menu col-3of3">
-				<a href="shop.html">
-					<img src="img/services-tile.jpg" alt="Photo of flowers in a tin barrel">
-					<p>Services</p>
-				</a>
-			</div>
-		</div>
-		</section>
 
 		<!----- Alternating Content ----->
-		<div class ="alternating-content-img col-1of2">
-			<img src="img/home-grown.jpg" alt="Photo of purple flowers in a garden">
-		</div>
-		<div class ="alternating-content-text col-2of2">
-			<h2>Home grown.</h2>
-			<p>We source our flowers from local suppliers, lowering our carbon footprint and providing the freshest blooms to our customers.</p>
-			<a href="shop.html">
-				<button type="button" class="btn-main">learn more</button>
-			</a>
-		</div>
-
-		<div class ="alternating-content-text col-1of2">
-			<h2>The gift of giving.</h2>
-			<p>ive one of nature’s most beautiful gifts to the people who mean the most to you.</p>
-			<a href="shop.html">
-					<button type="button" class="btn-main">shop flowers</button>
-			</a>
-		</div>
-		<div class ="alternating-content-img col-2of2">
-			<img src="img/gift-of-giving.jpg" alt="Photo of bouquet of flowers being held by a woman">
-		</div>
-
-
-	<!-- 	<div class="grid">
-		<div class ="alternating-content col-2of2-reverse">
-			<h2>The gift of giving.</h2>
-			<p>Give one of nature’s most beautiful gifts to the people who mean the most to you.</p>
-			<a href="shop.html">
-				<button type="button" class="btn-main">shop flowers</button>
-			</a>
-		</div> -->
-
-		<!-- <div class="alternating-content-two"> -->
-		<!-- <div class ="alternating-content col-1of2-reverse">
-			<img src="img/gift-of-giving.jpg" alt="Photo of bouquet of flowers being held by a woman">
-		</div>
-		</div> -->
-		<!-- </div> -->
+    <div class ="grid products">
+        <div class ="product-item col-1of3">
+             <img src="img/product-lovers-sunrise.png" alt="Photo of Lover's Sunrise bouquet">
+              <p class="product-name">Lover's Sunrise</p>
+            <p class ="price">$45.99</p>
+            
+            </div>
+        </div>
+      </div>
 
 		<!----- Footer----->
 		 <div class="container-footer">
