Added product detail page

--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
                   <div class="grid-col-1of6">
                      	 <a href="support.html">Support</a>
                   </div>
-                  <div class="grid-col-1of6">
+<!--                   <div class="grid-col-1of6">
                      	 <a href="#">Contact</a>
-                  </div>
+                  </div> -->
 
                    <div class="grid-col-1of6">
                  		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
@@ -71,19 +71,19 @@
 		<section class ="values">
 			<div class ="grid ">
 				<div class ="values col-1of3">
-					<img src="img/flower-tile.png" alt="Photo of peonies">
+					<img src="img/icons/family.png" alt="Icon of a family">
 					<h3 class="web">Family owned & operated</h3>
 					<p> We are a multigenerational business that has served Vancouver for over 25 years. </p>
 				</div>
 
 				<div class ="values col-2of3">
-					<img src="img/plants-tile.jpg" alt="Photo of a green plant">
+					<img src="img/icons/earth-truck.png" alt="Icon of a truck with earth on it">
 					<h3 class="web">Local</h3>
 					<p>We work with a network of local growers to support low-carbon arigiculture. </p>
 				</div>
 
 				<div class ="values col-3of3">
-					<img src="img/services-tile.jpg" alt="Photo of flowers in a tin barrel">
+					<img src="img/icons/care.png" alt="Icon of a hands capturing a heart">
 					<h3 class="web">Bespoke</h3>
 					<p>We consider the details and idiosyncrasies that make each bouquet different and unique.</p>
 				</div>
