--- a/shop.html
+++ b/shop.html
@@ -43,9 +43,6 @@
                   <div class="grid-col-1of6">
                      	 <a href="support.html">Support</a>
                   </div>
-                  <div class="grid-col-1of6">
-                     	 <a href="#">Contact</a>
-                  </div>
 
                    <div class="grid-col-1of6">
                  		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
@@ -70,7 +67,7 @@
 				  	  <p class="product-name">Lover's Sunrise</p>
 					  <p class ="price">$45.99</p>
 					  <div class="btn-position">
-							<a class ="btn-quick-add" href="#"> + Quick Add </a>
+							<a class ="btn-quick-add" href="detailed-product.html"> + Quick Add </a>
 				 	  </div>
 				</div>
 
