--- a/support.html
+++ b/support.html
@@ -44,10 +44,6 @@
                   <div class="grid-col-1of6">
                      	 <a href="support.html">Support</a>
                   </div>
-                  <div class="grid-col-1of6">
-                     	 <a href="#">Contact</a>
-                  </div>
-
                    <div class="grid-col-1of6">
                  		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
             	  </div>
@@ -57,25 +53,34 @@
 		<section class ="about">
 			<div class ="hero">
 				<div class="text">
-					<h1>We are here to help you.</h1>
+					<h1>We are here to help!</h1>
 				</div>
 			</div>
-			<!-- <div class = "hero-about col-1of2-reverse">
-				<img src="img/product-mod-image.png " alt="Photo of bouquet of flowers being held by a woman">
-			</div> -->
-		<p class="about-desc">
-			FAQ
-		</p>
 		</section>
 
     <button class="accordion">Who is Four Seasons Floral?</button>
     <div class="panel">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>
+      	We are a family-owned and full-service floral shop based in Vancouver, BC.
+      </p>
     </div>
 
-    <button class="accordion">Why Four Seasons Floral?</button>
+    <button class="accordion">Where do you delivery?</button>
     <div class="panel">
-      <p>Lorem ipsum...</p>
+      <p>
+      	Our shop locally serves the following cities and surrounding areas:
+		<ul>
+		    <li> Burnaby </li>
+			<li>Vancouver</li>
+		</ul>
+      </p>
+    </div>
+
+    <button class="accordion">What if my choice of flowers aren't available?</button>
+    <div class="panel">
+      <p>
+      	Occasionally, substitutions may be necessary to create your bouquet due to the availability of certain flowers. Care is taken to maintain the style, theme and color scheme of the arrangement, using flowers of equal value. In single-flower arrangements, such as an all rose bouquet, or orchids, we will make every attempt to match the flower type, but may substitute with another color.
+      </p>
     </div>
 
     <script>
@@ -94,8 +99,6 @@
       });
     }
     </script>
-
-
 
 		<!----- Footer----->
 		 <div class="container-footer">
@@ -124,7 +127,7 @@
 			 </div>
 	 	</div>
 
-	 	<div class="sub-footer">
+		 <div class="sub-footer">
 	 		<p>Made with love in Vancouver, B.C.</p>
 	 		<a href="styleguide.html" target="_blank"> Styleguide</a>
 	 		<a href="citations.html" target="_blank"> Citations</a>
